Fix minor overflow issue

--- a/pages/marketplace/style.module.css
+++ b/pages/marketplace/style.module.css
@@ -11,7 +11,7 @@
   width: 100%;
 
   .intro {
-    @media screen and (min-width: 1024px){
+    @media screen and (min-width: 520px){
       width: calc(100% - 120px);
     }
   }
@@ -78,8 +78,10 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 60px;
+  }
 
-    .intro {
+  .intro {
+    @media screen and (min-width: 520px) {
       grid-column: 1 / -1;
     }
   }
@@ -106,10 +108,6 @@
   @media screen and (min-width: 520px) {
     grid-template-columns: 1fr 1fr;
     gap: 20px 30px;
-
-    .intro {
-      grid-column: 1 / -1;
-    } 
   }
 }
 
@@ -119,10 +117,6 @@
 
   @media screen and (min-width: 520px) {
     grid-template-columns: 1fr 1fr;
-
-    .intro {
-      grid-column: 1 / -1;
-    }
   }
 
   @media screen and (min-width: 800px) {
